[tool.poetry]
name = "rule_vm"
version = "0.1.0"
description = ""
authors = ["hrithik098 <hrithiky328@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "1.4.4"
arrow = "0.17.0"
async_generator = "1.10"
atomicwrites = "1.4.0"
attrs = "20.2.0"
backcall = "0.2.0"
better-exceptions = "0.2.2"
black = "20.8b1"
CacheControl = "0.12.6"
cachetools = "4.1.1"
certifi = "2020.6.20"
cffi = "1.14.3"
chardet = "3.0.4"
click = "7.1.2"
colorama = "0.4.4"
dateparser = "0.7.6"
decorator = "4.4.2"
firebase-admin = "4.4.0"
google-api-core = "1.23.0"
google-api-python-client = "1.12.5"
google-auth = "1.22.1"
google-auth-httplib2 = "0.0.4"
google-cloud-core = "1.4.3"
google-cloud-firestore = "1.9.0"
google-cloud-pubsub = "2.1.0"
google-cloud-storage = "1.32.0"
google-crc32c = "1.0.0"
google-resumable-media = "1.1.0"
googleapis-common-protos = "1.52.0"
grpc-google-iam-v1 = "0.12.3"
grpcio = "1.33.1"
httplib2 = "0.18.1"
humanize = "3.0.1"
idna = "2.10"
iniconfig = "1.1.1"
ipython = "7.18.1"
ipython_genutils = "0.2.0"
jedi = "0.17.2"
jsonschema = "3.2.0"
libcst = "0.3.13"
loguru = "0.5.3"
maya = "0.6.1"
msgpack = "1.0.0"
mypy-extensions = "0.4.3"
outcome = "1.0.1"
packaging = "20.4"
parse = "1.18.0"
parso = "0.7.1"
pathspec = "0.8.0"
pendulum = "2.1.2"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pluggy = "0.13.1"
prompt-toolkit = "3.0.8"
proto-plus = "1.11.0"
protobuf = "3.13.0"
ptyprocess = "0.6.0"
py = "1.9.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.20"
Pygments = "2.7.1"
pyparsing = "2.4.7"
pyrsistent = "0.17.3"
pytest = "6.1.1"
pytest-trio = "0.7.0"
python-dateutil = "2.8.1"
python-dotenv = "0.14.0"
python-http-client = "3.3.1"
pytz = "2020.1"
pytzdata = "2020.1"
PyYAML = "5.3.1"
regex = "2020.10.15"
requests = "2.24.0"
rope = "0.18.0"
rsa = "4.6"
sendgrid = "6.4.7"
six = "1.15.0"
snaptime = "0.2.4"
sniffio = "1.2.0"
sortedcontainers = "2.2.2"
starkbank-ecdsa = "1.1.0"
toml = "0.10.1"
traitlets = "5.0.5"
trio = "0.17.0"
typed-ast = "1.4.1"
typing-extensions = "3.7.4.3"
typing-inspect = "0.6.0"
tzlocal = "2.1"
uritemplate = "3.0.1"
urllib3 = "1.25.11"
wcwidth = "0.2.5"
win32-setctime = "1.0.3"
redis = "^3.5.3"
aioredis = "^1.3.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
